# STM32_Embedded_CPP

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CONTRIBUTING.md  GITHUB_ACTIONS_PLAN.md  LICENSE  README.md  STM32L432KCUX_FLASH.ld  STM32_Embedded_CPP.ioc  USART_README.md
Adapters/Inc/: mcu_adapter.h
App/Inc/: App.h
App/Src/: App.cpp
Core/Inc/: app.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h  usart.h
Core/Lib/: base.cpp  base.h  button.cpp  button.h  core.cpp  core.h  gpio.cpp  gpio.hpp  led.cpp  led.h  pins.cpp  pins.h
Core/Src/: app.cpp  gpio.c  main.c  stm32l4xx_it.c  syscalls.c  tim.c  usart.c
Device/Inc/: gpio.h  usart.h
Device/Src/: gpio.cpp  usart.cpp
Drivers/Device/Inc/: gpio.h  usart.h
Drivers/Device/Src/: gpio.cpp
Examples/01_GPIO_Blinky/: App.cpp  README.md
Examples/02_USART_HelloWorld/: App.cpp  README.md
Inc/: app.h  clock.h  common.h  core.h  gpio.h  rcc.h  system.h  usart.h
Src/: clock.cpp  core.cpp  gpio.cpp  main.cpp  rcc.cpp  system.cpp  usart.cpp
Targets/Nucleo_F446RE/: .cproject  .mxproject  .project  Nucleo_F446RE.ioc  STM32F446RETX_FLASH.ld  STM32F446RETX_RAM.ld
Targets/Nucleo_F446RE/Core/Inc/: main.h  usart.h
Targets/Nucleo_F446RE/Core/Src/: gpio.c  main.c  usart.c
Targets/Nucleo_L433/: .cproject  .project  STM32L433RBTX_FLASH.ld
Targets/Nucleo_L433/Core/Src/: main.c  stm32l4xx_it.c
Tests/Inc/: mock_stm32l4xx.h
Tests/Runner/: test_runner.cpp
Tests/Src/: mock_stm32l4xx.cpp  test_gpio.cpp
Utils/Inc/: CppWrapper.h
Utils/Src/: CppWrapper.cpp
